--- a/src/style.css
+++ b/src/style.css
@@ -15,7 +15,7 @@ body {
   width: 70%;
   background-color: rgb(199, 219, 221);
   border-radius: 20px;
-  box-shadow: 10px 0 10px rgba(0, 0, 0, 0.803);
+  box-shadow: 10px 0 10px rgba(0, 0, 0, 0.435);
 }
 
 .content {
@@ -34,7 +34,7 @@ section {
 
 .score-list {
   list-style-type: none;
-  border: 4px solid #000;
+  border: 4px solid rgb(133, 183, 187);
   margin-top: 20px;
   width: 300px;
 }
